# Spec2Ship

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.llm.yml  docker-compose.train.yml  docker-compose.yml  pytest.ini  run_tests.ps1  test_spec2ship.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
artifacts/: report.md
backend/: Dockerfile  pyproject.toml
backend/app/: alembic.ini  jobs.py  main.py  migrate.py  worker.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0001_init.py
backend/app/api/: routes.py  routes_artifacts.py  routes_runs.py  routes_workspaces.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: artifact.py  run.py  step.py
backend/app/repositories/: artifacts.py  runs.py  steps.py
backend/app/schemas/: artifact.py  run.py  step.py
backend/app/services/: bug_detector.py  code_context.py  commands.py  diffing.py  directives.py  fs.py  kb.py  patches.py  run_overrides.py  run_workspaces.py  workspace_profile.py  workspaces.py
backend/app/services/llm/: ollama.py
backend/app/tests/: test_bug_detector.py  test_diffing.py  test_directives.py  test_health.py  test_kb.py
backend/app/use_cases/: run_pipeline.py  swebench_eval.py  swebench_train_lora.py
docs/: ARCHITECTURE.md
ml/: README.md  requirements.txt
scripts/: reset_sample_workspace.ps1  reset_sample_workspace.sh
web/: Dockerfile  next.config.mjs  package.json
(+71 files in other folders)
